feature - áp dụng voucher khi thanh toán  - xử lý request gửi vê từ js từ đó hoàn thiện tính năng áp dụng voucher khi thanh toán ở phần người dùng